<resources>
    <string name="app_name">Demo1</string>
    <string name="btn0">0</string>

    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>

    <string name="btnsuma">+</string>
    <string name="btnresta">-</string>
    <string name="btnmultiplicacion">*</string>
    <string name="btndivision">/</string>

    <string name="btnseno">sen</string>
    <string name="btncoseno">cos</string>
    <string name="btntangente">tan</string>
    <string name="btnpotencia">^</string>
    <string name="btnraiz">v</string>

    <string name="btnpunto">.</string>
    <string name="btnigual">=</string>
    <string name="btnc">c</string>
    <string name="btndel">DEL</string>

</resources>
