<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.pedrow10.demo1.MainActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#03A9F4"
        android:columnCount="4">

        <TextView
            android:id="@+id/txtview2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="5dp"
            android:background="#F0F4C3"
            android:gravity="right"
            android:text=""
            android:textSize="40dp"

            />
        <TextView
            android:id="@+id/txtview1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="5dp"
            android:background="#f5f5f5"
            android:gravity="right"
            android:text=""
            android:textSize="40dp"

            />

        <Button
            android:id="@+id/digit7"
            android:layout_width="wrap_content"
            android:onClick="obtenerDigito"
            android:text="@string/btn7" />

        <Button
            android:id="@+id/digit8"
            android:layout_width="wrap_content"

            android:onClick="obtenerDigito"
            android:text="@string/btn8" />

        <Button
            android:id="@+id/digit9"
            android:layout_width="wrap_content"

            android:onClick="obtenerDigito"
            android:text="@string/btn9" />

        <Button
            android:id="@+id/digitmas"
            android:layout_width="wrap_content"

            android:onClick="obtenerDigito"
            android:text="@string/btnsuma" />

        <Button
            android:id="@+id/digit4"
            android:layout_width="wrap_content"

            android:onClick="obtenerDigito"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/digit5"
            android:layout_width="wrap_content"

            android:onClick="obtenerDigito"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/digit6"
            android:layout_width="wrap_content"

            android:onClick="obtenerDigito"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/digitmenos"
            android:layout_width="wrap_content"

            android:onClick="obtenerDigito"
            android:text="@string/btnresta" />

        <Button
            android:id="@+id/digit1"
            android:layout_width="wrap_content"

            android:onClick="obtenerDigito"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/digit2"
            android:layout_width="wrap_content"

            android:onClick="obtenerDigito"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/digit3"
            android:layout_width="wrap_content"

            android:onClick="obtenerDigito"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/digitpor"
            android:layout_width="wrap_content"

            android:onClick="obtenerDigito"
            android:text="@string/btnmultiplicacion" />

        <Button
            android:id="@+id/digit."
            android:layout_width="wrap_content"

            android:onClick="obtenerDigito"
            android:text="@string/btnpunto" />

        <Button
            android:id="@+id/digit0"
            android:layout_width="wrap_content"

            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:onClick="obtenerDigito"
            android:text="@string/btn0" />

        <Button
            android:id="@+id/digitdividido"
            android:layout_width="wrap_content"

            android:onClick="obtenerDigito"
            android:text="@string/btndivision" />

        <Button
            android:id="@+id/digitigual"
            android:layout_width="wrap_content"

            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:text="@string/btnigual"
           />
        <Button
            android:id="@+id/digitdel"
            android:layout_width="wrap_content"

            android:layout_gravity="fill_horizontal"
            android:text="@string/btndel"
           />

        <Button
            android:id="@+id/digitclear"
            android:layout_width="wrap_content"

            android:layout_gravity="fill_horizontal"
            android:text="C"
            android:onClick="clear"/>


    </GridLayout>

</LinearLayout>
